--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     ]
   },
   "devDependencies": {
+    "@redwoodjs/auth-dbauth-setup": "8.0.0",
     "@redwoodjs/core": "8.0.0",
     "@redwoodjs/eslint-config": "^8.1.1",
     "@redwoodjs/project-config": "8.0.0",
